--- a/style.css
+++ b/style.css
@@ -1,136 +1,359 @@
+html {
+    scroll-behavior: smooth;
+}
+.darkmode {
+    --bg-color: #252525;
+    --text-color: #d4761d;
+    --text-color2: #fc9434;
+    --text-shine: #ffc895;
+    --border-color: #836b00;
+}
+.lightmode {
+    --bg-color: #dadada;
+    --text-color: #d4761d;
+    --text-color2: #fc9434;
+    --text-shine: #ffc895;
+    --border-color: #836b00;
+}
+
 body {
-    background-color: #050505;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto, sans-serif;
+    background-color: var(--bg-color);
+    top: 0;
+    left: 0;
+    margin: 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
-
-#title {
-    color: #fc9434;
-    font-size: 1.5cm;
-    display: block;
-    width: 100%;
-    text-align: center;
+body::-webkit-scrollbar {
+    display: none;
 }
-#name {
-    color: #fc9434;
-    font-size: 2cm;
-    display: block;
-    width: 100%;
-    text-align: center;
-    text-decoration: underline;
-    margin-top: -1cm;
-}
-
-#subtitle {
-    color: #d4761d;
-    font-size: 3rem;
-    display: block;
-    width: 100%;
-    text-align: center;
-}
-
-#countdown {
-    color: #d4761d;
-    margin: 0 auto;
-    text-align: center;
-    border: 4px dashed #261505
-}
-
 h1 {
-    font-weight: 600;
-    letter-spacing: 0.500rem;
-    font-size: 3.0em;
-    text-transform: uppercase;
+    color: var(--text-color2);
+    font-size: 85px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+    text-decoration: underline var(--text-color) 5px;
+    text-underline-offset: 10px;
+    transition: 0.5s;
+}
+
+h1:hover {
+    transition: 0.5s;
+    transform: scale(1.025);
+}
+
+#backgroundImage {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(10px);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 0 20px;
+    background-color: #252525a7;
+    border-radius: 10px;
+    border: 2px solid var(--border-color);
+    box-shadow: 0 0 10px var(--text-color2);
+    color: var(--text-color);
+    font-size: 30px;
+    transition: 0.5s;
+}
+.container:hover {
+    box-shadow: 0 0 25px var(--text-color2);
+    transform: scale(1.025);
+    transition: 0.5s;
 }
 
 li {
     display: inline-block;
-    font-size: 2.0em;
+    font-size: 32px;
     list-style-type: none;
-    padding: 2em;
+    padding: 32px;
     text-transform: uppercase;
 }
 
 li span {
     display: block;
-    font-size: 3.5rem;
+    font-size: 56px;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-.slides {
-    margin-right: 15%;
-    border: 4px solid #BC681A
+#scrollHint {
+    border-radius: 50%;
+    border: 2px solid var(--border-color);
+    box-shadow: 0 0 10px var(--text-color2);
+    color: var(--text-color);
+    font-size: 30px;
+    height: 50px;
+    width: 50px;
+    margin: 0 auto;
+    padding: 0;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 1s infinite;
+    text-align: center;
+    background-color: #252525a7;
+    transition: 0.5s;
 }
 
-#para {
-    color: #d4761d;
-    border: 4px dashed #261505;
-    text-align: left;
-    height: 275px;
+#scrollHint:hover {
+    cursor: pointer;
+    box-shadow: 0 0 20px var(--text-color2);
+    transition: 0.5s;
 }
 
-#paraImg {
-    display: inline-block;
-    padding: 30px;
+@keyframes bounce {
+    0% {
+        transform: translateX(-50%) translateY(0);
+    }
+    50% {
+        transform: translateX(-50%) translateY(-10px);
+    }
+    100% {
+        transform: translateX(-50%) translateY(0);
+    }
 }
 
-#paraTitle {
-    font-size: 2rem;
-    display: block;
+#scrollHint > i {
+    font-size: 30px;
+    line-height: 50px;
+    transition: 0.5s;
 }
 
-#paraDescription {
-    font-size: 1rem;
-    display: block;
+#scrollHint > i:hover {
+    transition: 0.5s;
+    color: var(--text-color2);
 }
 
-#paraText{
-    display: inline-block;
-    vertical-align: top;
+#content {
+    position: absolute;
+    top: 100vh;
+    left: 0;
+    width: 100%;
+    padding: 25px;
 }
 
-#images {
-    display: inline-block;
-    vertical-align: top;
+.shine {
+    background: linear-gradient(90deg, var(--text-color2) 0%, var(--text-color2) 40%, var(--text-shine) 50%, var(--text-color2) 60%, var(--text-color2) 100%);
+    background-size: 400% 400%;
 
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 
-    /* border: #d4761d solid 1px; */
-    /* box-shadow: #BC681A 0px 0px 10px; */
-
-    width: 65%;
-    height: 80%;
+    animation: shine 20s infinite;
 }
 
-.image {
-    
-    transition: transform 1s;
+@keyframes shine {
+    0% {
+        background-position: 400% 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
 }
 
-.image:hover {
-    transition: transform 2s;
-    border: #d4761d solid 1px;
-    box-shadow: #BC681A 0px 0px 10px;
-    transform: scale(10);
-}
-
-.slideshow{
+#infoDiv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     height: 400px;
-}
-
-/* #prev, #next {
-    font-size: 3cm;
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    color: #fc9434;
-    cursor:pointer;
-    
-    top: 100%;
-    transform: translateY(-100%);
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    margin-bottom: 100px;
+    margin-top: 50px;
 
 }
+#infoDiv > * {
+    text-align: center;
+    margin: 0 auto;
+}
 
-#prev:hover, #next:hover{
-    color: #BC681A;
-} */
+#infoTextDiv {
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+    height: fit-content;
+    width: fit-content;
+    margin: auto;
+}
+
+#discordIframe {
+    box-shadow: 0 0 10px var(--text-color2);
+    border-radius: 10px;
+    transition: 0.5s;
+}
+#discordIframe:hover {
+    box-shadow: 0 0 20px var(--text-color2);
+    /* transform: scale(1.025); */
+    transition: 0.5s;
+}
+
+#navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 100vh;
+    background-color: var(--text-color2);
+    margin-left: 30px;
+    opacity: 0.25;
+
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    transition: 0.5s;
+}
+
+#navbar:hover {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+#navSeasons {
+    display: grid;
+    gap: 15px;
+
+}
+
+.navItem {
+    background-color: var(--text-color);
+    width: 50px;
+    height: 50px;
+    margin-left: -20px;
+    box-shadow: 0 0 5px var(--text-color2);
+    border: 2px solid var(--text-color2);
+    border-radius: 10px;
+    /* overflow: hidden; */
+    transition: 0.5s;
+}
+.navItem:hover {
+    cursor: pointer;
+    box-shadow: 0 0 20px var(--text-color2);
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+
+.navItem > * {
+    width: 100%;
+    height: 100%;
+    font-size: 35px;
+    color: var(--bg-color);
+    text-align: center;
+}
+
+.navItem > i {
+    line-height: 50px;
+}
+
+.navItem > img {
+    border-radius: 10px;
+}
+
+.glow {
+    animation: glow 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 10px var(--text-color2);
+    }
+    100% {
+        box-shadow: 0 0 20px var(--text-shine);
+    }
+}
+
+.navActive {
+    border: 2px solid var(--text-shine);
+    box-shadow: 0 0 20px var(--text-shine);
+    /* transform: scale(1.065); */
+
+    transition: 0.5s;
+
+    background: linear-gradient(45deg, var(--text-color2) 0%, var(--text-color2) 40%, var(--text-shine) 50%, var(--text-color2) 60%, var(--text-color2) 100%);
+    background-size: 800% 400%;
+
+    animation: shine 20s infinite;
+}
+
+#seasons {
+    display: grid;
+    gap: 50px;
+}
+
+.container.season {
+    display: grid;
+    grid-template-columns: 200px 1fr 200px;
+    font-size: 20px;
+    padding-left: 0;
+    overflow: hidden;
+    width: 50%;
+    height: 200px;
+}
+.seasonLogo {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+}
+.seasonDiv{
+    display: inline-block;
+    padding-left: 20px;
+}
+
+.title {
+    color: var(--text-color2);
+}
+
+.title.season {
+    text-decoration: underline;
+}
+
+.button {
+    padding: 10px;
+    display: inline-block;
+    border-radius: 10px;
+    background-color: var(--text-color2);
+    color: var(--bg-color);
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: uppercase;
+    align-self: self-end;
+    margin: 10px;
+    transition: 0.5s;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: var(--text-shine);
+    transition: 0.5s;
+}
+
+.button:active {
+    background-color: var(--text-color);
+    transition: 0.5s;
+}
