--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1:hover {
     font-size: 30px;
     transition: 0.5s;
 }
-.container:hover {
+.container:hover, .seasonContainer:hover {
     box-shadow: 0 0 25px var(--text-color2);
     transform: scale(1.025);
     transition: 0.5s;
@@ -152,7 +152,7 @@ li span {
     top: 100vh;
     left: 0;
     width: 100%;
-    padding: 25px;
+    padding-bottom: 100px;
 }
 
 .shine {
@@ -178,8 +178,8 @@ li span {
 }
 
 #infoDiv {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     height: 400px;
     justify-content: center;
     align-items: center;
@@ -187,6 +187,8 @@ li span {
     width: 100%;
     margin-bottom: 100px;
     margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 #infoDiv > * {
@@ -210,7 +212,6 @@ li span {
 }
 #discordIframe:hover {
     box-shadow: 0 0 20px var(--text-color2);
-    /* transform: scale(1.025); */
     transition: 0.5s;
 }
 
@@ -249,7 +250,6 @@ li span {
     box-shadow: 0 0 5px var(--text-color2);
     border: 2px solid var(--text-color2);
     border-radius: 10px;
-    /* overflow: hidden; */
     transition: 0.5s;
 }
 .navItem:hover {
@@ -291,7 +291,6 @@ li span {
 .navActive {
     border: 2px solid var(--text-shine);
     box-shadow: 0 0 20px var(--text-shine);
-    /* transform: scale(1.065); */
 
     transition: 0.5s;
 
@@ -306,22 +305,31 @@ li span {
     gap: 50px;
 }
 
-.container.season {
-    display: grid;
-    grid-template-columns: 200px 1fr 200px;
+.seasonContainer {
+    display: flex;
+    flex-direction: row;
+
+    margin: 0 auto;
+    background-color: #252525a7;
+    border-radius: 10px;
+    border: 2px solid var(--border-color);
+    box-shadow: 0 0 10px var(--text-color2);
+    color: var(--text-color);
     font-size: 20px;
-    padding-left: 0;
+    transition: 0.5s;
+
     overflow: hidden;
     width: 50%;
-    height: 200px;
+
 }
 .seasonLogo {
-    display: inline-block;
-    width: 200px;
-    height: 200px;
+    width: 33%;
+    height: fit-content;
+    max-width: 210px;
+    max-height: 210px;
+    box-shadow: 0 0 10px var(--text-color2);
 }
 .seasonDiv{
-    display: inline-block;
     padding-left: 20px;
 }
 
@@ -342,8 +350,9 @@ li span {
     font-size: 13px;
     font-weight: bold;
     text-transform: uppercase;
-    align-self: self-end;
-    margin: 10px;
+    
+    margin: auto 15px 15px auto;
+
     transition: 0.5s;
 }
 
@@ -357,3 +366,136 @@ li span {
     background-color: var(--text-color);
     transition: 0.5s;
 }
+
+@media screen and (max-width: 1030px) {
+    #infoDiv {
+        flex-direction: column;
+        height: fit-content;
+    }
+    #infoTextDiv {
+        margin-bottom: 20px;
+    }
+    #discordIframe {
+        height: 350px;
+        width: 50%;
+    }
+    #seasons {
+        grid-template-columns: 1fr;
+    }
+    .seasonContainer {
+        width: 80%;
+    }
+    .seasonLogo {
+        width: 100%;
+    }
+    #countdownDiv {
+        max-width: 80%;
+    }
+    li {
+        font-size: 20px;
+    }
+    li span {
+        font-size: 35px;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+    #infoDiv {
+        flex-direction: column;
+        height: fit-content;
+    }
+    #infoTextDiv {
+        margin-bottom: 20px;
+    }
+    #discordIframe {
+        height: 350px;
+        width: 50%;
+    }
+    #seasons {
+        grid-template-columns: 1fr;
+    }
+    .seasonContainer {
+        width: 70%;
+        font-size: 15px;
+    }
+    .seasonContainer > * > .title {
+        font-size: 25px;
+    }
+    .seasonLogo {
+        width: 100%;
+    }
+    #countdownDiv {
+        font-size: 20px;
+    }
+    li {
+        font-size: 15px;
+    }
+    li span {
+        font-size: 30px;
+    }
+    #heading {
+        font-size: 70px;
+    }
+}
+
+@media screen and (max-width: 830px) {
+    li {
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #navbar {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 630px) {
+    #heading {
+        font-size: 60px;
+    }
+    .seasonContainer {
+        width: 90%;
+    }
+    #countdownDiv {
+        font-size: 15px;
+    }
+    #infoTextDiv {
+        padding: 10px;
+        width: 90%;
+    }
+
+}
+
+@media screen and (max-width: 530px) {
+    #heading {
+        font-size: 50px;
+        text-align: center;
+    }
+    li {
+        font-size: 10px;
+    }
+    li span {
+        font-size: 25px;
+    }
+    
+    .seasonContainer {
+        width: 80%;
+        flex-direction: column;
+    }
+    .seasonContainer > * > .title {
+        font-size: 20px;
+    }
+    .seasonContainer > .button {
+        align-self: unset;
+    }
+    .seasonLogo {
+        align-self: center;
+    }
+    #discordIframe {
+        height: 300px;
+        width: 80%;
+    }
+}
+
