--- a/project/style.css
+++ b/project/style.css
@@ -41,7 +41,7 @@ body {
     width: 0px;
     overflow: hidden;
 
-    background-color: var(--text-color);
+    background-color: var(--text-color2);
     color: var(--bg-color);
 
     display: flex;
@@ -55,6 +55,94 @@ body {
     transition: 0.5s;
 }
 
+.icon {
+    height: 1em;
+    width: 1em;
+}
+
+#screenshotLeft, #screenshotRight {
+    width: 30px;
+    height: 90px;
+    border: 2px solid var(--text-color);
+    box-shadow: 0 0 10px var(--text-color2);
+    background-color: var(--text-color2);
+    border-radius: 10px;
+    padding: 5px;
+    opacity: 0.45;
+    transition: 0.25s;
+}
+
+#screenshotLeft:hover, #screenshotRight:hover {
+    transition: 0.25s;
+    transform: scale(1.025);
+    box-shadow: 0 0 25px var(--text-color2);
+    opacity: 0.90;
+}
+
+#screenshotLeft:active, #screenshotRight:active {
+    transition: 0.25s;
+    transform: scale(0.90);
+    color: var(--bg-color);
+    background-color: var(--text-color);
+    opacity: 0.90;
+}
+#screenshotLeft {
+    translate: 65px;
+
+}
+#screenshotRight {
+    translate: -65px;
+}
+
+#screenshot {
+    width: 50%;
+    min-width: 300px;
+    border-radius: 10px;
+    border: 2px solid var(--text-color);
+    box-shadow: 0 0 10px var(--text-color2);
+    margin: 10px;
+
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
+#overview {
+    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#index {
+    position: relative;
+    top: 120px;
+    height: calc(100vh - 120px);
+    overflow: auto;
+    
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.section {
+    box-shadow: 0 0 10px var(--text-color2);
+    border-radius: 15px;
+    margin: 20px;
+    background-color: #252525a7;
+    width: fit-content;
+    min-width: 300px;
+}
+
+.inlineDiv {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 /* #logoImg {
     transform: translateZ(50px);
@@ -93,84 +181,12 @@ body {
 
 /*fine until this*/
 
-#index {
-    position: relative;
-    top: 120px;
-    height: calc(100vh - 120px);
-    overflow: auto;
-    
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.section {
-    box-shadow: 0 0 10px var(--text-color2);
-    border-radius: 15px;
-    margin: 20px;
-    background-color: #252525a7;
-}
-
-
-#screenshotDIV {
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
 a.button {
     text-decoration: none;
     margin: 10px;
 }
 
-
-#screenshot {
-    width: calc(1920px * 0.5);
-    height: calc(1057px * 0.5);
-    border-radius: 10px;
-    border: 2px solid var(--text-color);
-    box-shadow: 0 0 10px var(--text-color2);
-    margin: 10px;
-}
-
-
-#screenshotLeft, #screenshotRight {
-    width: 30px;
-    height: 30px;
-    border: 2px solid var(--text-color);
-    box-shadow: 0 0 10px var(--text-color2);
-    border-radius: 10px;
-    padding: 10px;
-    transition: 0.5s;
-}
-
-#screenshotLeft:hover, #screenshotRight:hover {
-    transition: 0.5s;
-    transform: scale(1.025);
-    box-shadow: 0 0 25px var(--text-color2);
-    background-color: var(--bg-color);
-}
-
-#screenshotLeft:active, #screenshotRight:active {
-    transition: 0.5s;
-    transform: scale(0.95);
-    color: var(--bg-color);
-    background-color: var(--text-color);
-}
-
-
-.inlineDiv {
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
 
 #playerStats rect {
     animation: 5s slide;
